# effect

./: .gitignore  README.md  photo.py  pyproject.toml  video.py
.effects/: pyvenv.cfg
.effects/Scripts/: activate  activate.bat
